--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/tomf/" # the subpath of your site, e.g. /blog
-domain: "tomf.github.com"
-url: "https://tomf.github.com" # the base hostname & protocol for your site, e.g. http://example.com
+domain: "tom-ficke.github.io"
+url: "https://tom-ficke.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: tomficke
 github_username:  tom-ficke
 
